modified:   README.md modified:   package.json

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "languages": [{
       "id": "lua",
       "aliases": ["script", "lua"],
-      "extensions": [".script"],
+      "extensions": [".script", ".lua"],
       "configuration": "./language-configuration.json"
     }],
     "grammars": [{
