--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "lua-syntax-highlight",
   "displayName": "Lua Syntax Highlight",
-  "description": "",
+  "description": "Syntax Highlight Lua",
   "version": "0.0.1",
   "engines": {
     "vscode": "^1.97.0"
@@ -21,5 +21,9 @@
       "scopeName": "source.script",
       "path": "./syntaxes/lua.tmLanguage.json"
     }]
-  }
+  },
+  "repository": {
+		"type": "git",
+		"url": "https://github.com/Gromer-Top/LuaSyntaxHighlightVSCode.git"
+	}
 }
